[package]
name = "dataset-generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.1", features = ["derive"] }
glob = "0.3.1"
rayon = "1.7.0"
tl = "0.7.7"
urlencoding = "2.1.2"

